[package]
authors       = ["Las <las@protonmail.ch>"]
description   = "Minimalistic helper for using errors"
documentation = "https://docs.rs/erroneous"
license       = "MIT OR Apache-2.0"
name          = "erroneous"
repository    = "https://github.com/Laaas/erroneous"
version       = "0.1.0"

[workspace]

[dependencies.erroneous-derive]
path = "derive"

[lib]
path = "lib.rs"

[dev-dependencies]
derive_more = "0.13"
