[package]
authors       = ["Las <las@protonmail.ch>"]
description   = "Minimalistic helper for using errors"
documentation = "https://docs.rs/erroneous"
license       = "MIT OR Apache-2.0"
name          = "erroneous"
readme        = "README.md"
repository    = "https://github.com/Laaas/erroneous"
version       = "1.0.0"

[workspace]

[dependencies.erroneous-derive]
path = "derive"
version = "1"

[lib]
path = "lib.rs"

[dev-dependencies]
derive_more = "0.13"
