[package]
authors       = ["Las <las@protonmail.ch>"]
description   = "Derive Error, a part of the erroneous crate"
documentation = "https://docs.rs/erroneous-derive"
license       = "MIT OR Apache-2.0"
name          = "erroneous-derive"
repository    = "https://github.com/Laaas/erroneous"
version       = "1.0.0"

[dependencies]
matches2 = "1"
syn = "0.15.9"
quote = "0.6.8"
proc-macro2 = "0.4.20"

[lib]
path = "lib.rs"
proc-macro = true
